--- a/css/diseño.css
+++ b/css/diseño.css
@@ -1,7 +1,7 @@
 /* line 2, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 body {
   background-color: white;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 /* line 9, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
@@ -22,9 +22,9 @@ body {
 /* line 28, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .header__main .main__head {
   text-align: center;
-  font-style: italic;
+  font-family: 'Style Script', cursive;
   padding: 5rem;
-  font-size: 2rem;
+  font-size: 200%;
   height: 70%;
 }
 
@@ -89,26 +89,31 @@ header nav ul li a {
   display: flex;
   flex-direction: column;
   color: white;
-  font-family: cursive;
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 1.5rem;
 }
 
-/* line 119, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 111, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+.footer .text-footer a {
+  color: white;
+}
+
+/* line 123, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .copyright {
   background-color: #222222;
 }
 
-/* line 123, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 127, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .copyright .footer-copyright {
   text-align: center;
   align-content: center;
   background-color: #222222;
-  font-family: cursive;
+  font-family: 'Source Sans Pro', sans-serif;
   color: white;
   font-size: 1rem;
 }
 
-/* line 137, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 141, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .sobre_nosotros .section__comentarios {
   display: flex;
   flex-direction: row;
@@ -119,7 +124,7 @@ header nav ul li a {
   max-width: 100%;
 }
 
-/* line 146, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 150, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .sobre_nosotros .section__comentarios p {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 250%;
@@ -129,7 +134,7 @@ header nav ul li a {
   margin-top: 100px;
 }
 
-/* line 161, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 165, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .sobre_nosotros .titulo-01 {
   text-align: center;
   align-content: center;
@@ -139,7 +144,7 @@ header nav ul li a {
   padding-top: 50px;
 }
 
-/* line 171, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 175, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .sobre_nosotros .how_we_do_it {
   display: flex;
   flex-direction: row;
@@ -149,9 +154,9 @@ header nav ul li a {
   width: 100%;
 }
 
-/* line 182, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 186, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .sobre_nosotros p {
-  font-family: fantasy;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 200%;
   text-align: center;
   justify-content: center;
@@ -159,7 +164,7 @@ header nav ul li a {
   padding-top: 25px;
 }
 
-/* line 192, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 196, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .sobre_nosotros .how_we_do_it_2 {
   display: flex;
   flex-direction: column;
@@ -170,20 +175,20 @@ header nav ul li a {
 }
 
 @media (max-width: 400px) {
-  /* line 192, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+  /* line 196, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
   .sobre_nosotros .how_we_do_it_2 {
     width: 100%;
   }
 }
 
-/* line 202, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 206, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .sobre_nosotros .photos_how_we_do_it {
   width: 80%;
   height: 80%;
   justify-content: center;
 }
 
-/* line 212, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 216, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .about__us {
   background-color: #A19882;
   font-family: Arial, Helvetica, sans-serif;
@@ -191,7 +196,7 @@ header nav ul li a {
   padding: 5px;
 }
 
-/* line 219, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 223, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .about__us .titulo_about_us {
   background-color: #A19882;
   align-content: center;
@@ -199,12 +204,12 @@ header nav ul li a {
   margin-top: 50px;
 }
 
-/* line 229, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 233, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .container {
   display: flex;
 }
 
-/* line 234, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 238, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .padre {
   display: flex;
   flex-direction: row;
@@ -214,7 +219,7 @@ header nav ul li a {
   width: 100%;
 }
 
-/* line 247, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 251, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 #carousel__main {
   display: flex;
   width: 100%;
@@ -228,7 +233,7 @@ header nav ul li a {
   justify-content: center;
 }
 
-/* line 262, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 266, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 #carousel__main .row {
   width: 50%;
   display: flex;
@@ -236,7 +241,7 @@ header nav ul li a {
   padding-bottom: 50px;
 }
 
-/* line 274, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 278, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .opiniones {
   display: flex;
   flex-direction: column;
@@ -245,7 +250,7 @@ header nav ul li a {
   max-width: 100%;
 }
 
-/* line 284, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 288, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .opiniones .opiniones-1 {
   display: flex;
   text-align: center;
@@ -255,7 +260,7 @@ header nav ul li a {
   padding-bottom: 70px;
 }
 
-/* line 293, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 297, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .opiniones .opiniones-2 {
   display: flex;
   flex-direction: row;
@@ -265,7 +270,7 @@ header nav ul li a {
   margin-bottom: 50px;
 }
 
-/* line 302, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 306, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .opiniones .opiniones-2 .opiniones-2-1 {
   display: flex;
   flex-direction: column;
@@ -277,7 +282,7 @@ header nav ul li a {
   border-radius: 15%;
 }
 
-/* line 313, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 317, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .opiniones .opiniones-2 .opiniones-2-1-photo {
   padding-top: 5px;
   width: 100px;
@@ -285,38 +290,38 @@ header nav ul li a {
   border-radius: 50%;
 }
 
-/* line 321, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 325, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .opiniones .opiniones-2 .opiniones-2-1-nombres {
   font-size: 30px;
   font-family: 'Source Sans Pro', sans-serif;
 }
 
-/* line 326, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 330, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .opiniones .opiniones-2 .opiniones-2-1-opinion {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 35px;
 }
 
-/* line 336, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 340, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .index_wallpaper {
   background-image: url(../fotos/prueba_01.jpg);
   background-position: center;
   height: 800px;
 }
 
-/* line 343, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 347, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .gift {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  background-color: #C2B8A3;
+  background-color: #eceeec;
   height: 50%;
   width: 100%;
   justify-content: center;
   align-items: flex-end;
 }
 
-/* line 353, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 357, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .gift .gift_01 {
   width: 100%;
   text-align: center;
@@ -324,39 +329,65 @@ header nav ul li a {
   justify-content: center;
 }
 
-/* line 362, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 366, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .gift .gift_02_01 {
   display: flex;
   flex-direction: column;
 }
 
-/* line 366, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 370, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .gift .gift_02_01 h1 {
   color: black;
-  font-size: 2.5rem;
+  font-size: 3.5rem;
+  border-bottom: 2px solid black;
 }
 
-/* line 371, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 376, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .gift .gift_02_01 p {
   color: #6d6868;
 }
 
-/* line 376, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 381, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .gift .gift_02_01 .gift_02 {
   width: 100%;
   text-align: center;
   align-items: center;
   justify-content: center;
-  font-size: 2rem;
+  font-size: 3rem;
+  padding-bottom: 50px;
 }
 
-/* line 385, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+/* line 389, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+.gift .gift_02_01 .gift_02 .form-control-03 {
+  background-color: #f2f2f2;
+  border: 3px solid black;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
+
+/* line 397, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+.gift .gift_02_01 .gift_02 .form-control-03 a {
+  color: black;
+}
+
+/* line 405, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+.gift .gift_02_01 .form-control-02 {
+  background-color: #f2f2f2;
+  border: 3px solid black;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  resize: none;
+}
+
+/* line 416, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
 .gift .photo__gift {
-  width: 20%;
+  width: 40%;
 }
 
 @media (max-width: 400px) {
-  /* line 395, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+  /* line 427, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
   .opiniones {
     display: flex;
     flex-direction: column;
@@ -365,7 +396,7 @@ header nav ul li a {
     height: auto;
     max-width: 100%;
   }
-  /* line 405, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+  /* line 437, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
   .opiniones-2-1 {
     display: flex;
     flex-direction: column;
@@ -376,7 +407,7 @@ header nav ul li a {
     color: white;
     border-radius: 15%;
   }
-  /* line 416, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+  /* line 448, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
   .opiniones-2 {
     display: flex;
     flex-direction: row;
@@ -386,29 +417,30 @@ header nav ul li a {
     margin-bottom: 50px;
     width: 100%;
   }
-  /* line 426, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
+  /* line 458, ../../CODERHOUSE/ProyectoCoder/scss/_main.scss */
   .photos {
     display: inline;
-    width: 300px;
-    height: 300px;
-    margin: 30px;
+    width: 250px;
+    height: 250px;
+    margin: 20px;
   }
 }
 
 /* line 1, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
 .photos {
   display: inline;
-  width: 350px;
-  height: 350px;
+  width: 300px;
+  height: 300px;
   margin: 30px;
+  border-radius: 20px;
 }
 
-/* line 9, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
+/* line 12, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
 .row {
   width: 100%;
 }
 
-/* line 13, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
+/* line 16, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
 .almohadones-2 {
   background-position: center;
   display: flex;
@@ -420,7 +452,7 @@ header nav ul li a {
   align-items: center;
 }
 
-/* line 25, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
+/* line 29, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
 .almohadones-2 .card_almohadones {
   display: flex;
   flex-direction: column;
@@ -431,7 +463,7 @@ header nav ul li a {
   background-color: #C2B8A3;
 }
 
-/* line 35, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
+/* line 40, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
 .almohadones-2 .card_almohadones p {
   font-family: 'Source Sans Pro', sans-serif;
   font-style: oblique;
@@ -439,47 +471,92 @@ header nav ul li a {
   font-size: 250%;
 }
 
-/* line 51, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
+/* line 56, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
 #titulo_almohadones {
   color: white;
 }
 
-/* line 56, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
+/* line 61, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
 #wallpaper_contact {
   background-image: url(../fotos/wallpaper_contact.jpg);
 }
 
-/* line 62, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
+/* line 67, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
 .contact_user {
   text-align: center;
   align-content: center;
   font-size: medium;
   font-style: oblique;
-  margin-top: 50px;
+  background-color: #f2f2f2;
+  padding-top: 50px;
 }
 
-/* line 72, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
-.contact {
+/* line 76, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
+.contact_user h1 {
+  margin-bottom: 0;
+  font-size: 3rem;
+}
+
+/* line 84, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
+.conteiner_formulario {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  max-width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
   background-color: #f2f2f2;
-  margin-top: 100px;
-  margin-bottom: 100px;
 }
 
-/* line 79, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
-.contact .photo_contact {
-  height: 200px;
-  width: 200px;
-  justify-content: center;
+/* line 95, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
+.conteiner_formulario .photo_contacto {
+  height: 250px;
+  width: 250px;
 }
 
-/* line 85, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
-.contact .inputs {
+/* line 101, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
+.conteiner_formulario .inputs_form {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  width: 500px;
+  width: 50%;
+}
+
+/* line 110, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
+.conteiner_formulario .casilleros {
+  border: none;
+  border-bottom: 3px solid black;
+  width: 100%;
+  padding-top: 10px;
+}
+
+/* line 117, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
+.conteiner_formulario .label {
+  font-family: cursive;
+  text-align: center;
+  margin-top: 30px;
+}
+
+/* line 124, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
+.conteiner_formulario .form-control {
+  background-color: #f2f2f2;
+  border: none;
+  border: none;
+  border-bottom: 3px solid black;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
+
+/* line 138, ../../CODERHOUSE/ProyectoCoder/scss/_almohadones.scss */
+.conteiner_formulario .form-control-02 {
+  background-color: #f2f2f2;
+  border: 3px solid black;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  resize: none;
 }
 
 /* line 1, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
@@ -523,9 +600,17 @@ header nav ul li a {
   width: 400px;
   height: 400px;
   justify-content: center;
+  transition: all 500ms ease-out;
+  cursor: pointer;
 }
 
-/* line 47, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
+/* line 44, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
+.de_todo_un_poco .asd .photos_div .photos_detodo .photos_detodo:focus {
+  width: 250px;
+  height: 200px;
+}
+
+/* line 53, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
 .de_todo_un_poco .asd .texto_detodo {
   display: flex;
   flex-direction: column;
@@ -538,25 +623,26 @@ header nav ul li a {
   flex-wrap: wrap;
 }
 
-/* line 58, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
+/* line 64, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
 .de_todo_un_poco .asd .texto_detodo p {
   font-family: 'Dancing Script', cursive;
 }
 
-/* line 71, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
+/* line 77, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
 .container {
   flex-direction: column;
+  display: flex;
 }
 
 @media (max-width: 600px) {
-  /* line 81, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
+  /* line 91, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
   .de_todo_un_poco {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
   }
-  /* line 88, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
+  /* line 98, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
   .de_todo_un_poco .asd {
     display: inline;
     width: 100%;
@@ -564,19 +650,19 @@ header nav ul li a {
     justify-content: space-evenly;
     text-align: justify;
   }
-  /* line 98, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
+  /* line 108, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
   .de_todo_un_poco .asd .photos_div {
     justify-content: center;
     width: 100%;
   }
-  /* line 106, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
+  /* line 116, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
   .de_todo_un_poco .asd .photos_div .photos_detodo {
     display: inline;
     width: 400px;
     height: 400px;
     justify-content: center;
   }
-  /* line 117, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
+  /* line 127, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
   .de_todo_un_poco .asd .texto_detodo {
     display: inline;
     text-align: center;
@@ -586,13 +672,13 @@ header nav ul li a {
     width: 50%;
     background-color: #E6DDC6;
   }
-  /* line 128, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
+  /* line 138, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
   .de_todo_un_poco .asd .texto_detodo p {
     font-family: 'Dancing Script', cursive;
   }
 }
 
-/* line 145, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
+/* line 155, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
 .back {
   background-image: url(../fotos/pantalla-index.jpg);
   background-position: 50%;
@@ -601,14 +687,14 @@ header nav ul li a {
 }
 
 @media (max-width: 799px) {
-  /* line 156, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
+  /* line 168, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
   .de_todo_un_poco {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
   }
-  /* line 163, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
+  /* line 175, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
   .de_todo_un_poco .asd {
     display: inline;
     width: 100%;
@@ -616,19 +702,19 @@ header nav ul li a {
     justify-content: space-evenly;
     text-align: justify;
   }
-  /* line 173, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
+  /* line 185, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
   .de_todo_un_poco .asd .photos_div {
     justify-content: center;
     width: 100%;
   }
-  /* line 181, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
+  /* line 193, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
   .de_todo_un_poco .asd .photos_div .photos_detodo {
     display: inline;
     width: 400px;
     height: 400px;
     justify-content: center;
   }
-  /* line 192, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
+  /* line 204, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
   .de_todo_un_poco .asd .texto_detodo {
     display: inline;
     text-align: center;
@@ -638,7 +724,7 @@ header nav ul li a {
     width: 50%;
     background-color: #E6DDC6;
   }
-  /* line 203, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
+  /* line 215, ../../CODERHOUSE/ProyectoCoder/scss/_deTodoUnPoco.scss */
   .de_todo_un_poco .asd .texto_detodo p {
     font-family: 'Dancing Script', cursive;
   }
