--- a/scss/_almohadones.scss
+++ b/scss/_almohadones.scss
@@ -1,8 +1,11 @@
 .photos{
     display: inline;
-    width: 350px;
-    height: 350px;
+    width: 300px;
+    height: 300px;
     margin: 30px;
+    border-radius: 20px;
+    
+    
 }
 
 
@@ -21,6 +24,7 @@
     background-color: whitesmoke;
     justify-content: center;
     align-items: center;
+   
 
     .card_almohadones{
         display: flex;
@@ -30,6 +34,7 @@
         align-items: center;
         margin: 2.5%;
         background-color: #C2B8A3 ;
+        
 
 
          p{
@@ -64,29 +69,79 @@
     align-content: center;
     font-size: medium;
     font-style: oblique;
+    background-color:#f2f2f2 ;
     
-    margin-top: 50px;
+    padding-top: 50px;
 
+    h1{
+        margin-bottom: 0;
+        font-size: 3rem;
+    }
 }
 
-.contact{
+
+
+.conteiner_formulario{
     display: flex;
     flex-direction: row;
-    background-color: #f2f2f2; 
-    margin-top: 99px;
-    margin-bottom: 100px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    max-width: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: #f2f2f2;
 
-    .photo_contact{
-       height: 200px ;
-        width: 200px;   
-        justify-content: center;
+    .photo_contacto{
+        height: 250px;
+        width: 250px;
+
     }
 
-    .inputs{
+    .inputs_form{
         display: flex;
         flex-direction: column;
-        flex-wrap: wrap;
-        width: 500px;
+        width: 50%;
+        
+      
 
+    }
+
+    .casilleros{
+        border: none;
+        border-bottom: 3px solid black;
+        width: 100%;
+        padding-top: 10px;
+    }
+
+    .label{
+        font-family: cursive;
+        text-align: center;
+        margin-top: 30px;
+
+    }
+
+    .form-control{
+        background-color: #f2f2f2;
+        border: none;
+        border: none;
+        border-bottom: 3px solid black;
+        width: 100%;
+        padding-top: 10px;
+        padding-bottom: 20px;
+        
+       
+        
+        
+    }
+
+    .form-control-02{
+        background-color: #f2f2f2;
+     
+        border: 3px solid black;
+        width: 100%;
+        padding-top: 10px;
+        padding-bottom: 20px;
+        resize: none;
     }
 }
