--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -2,7 +2,7 @@
 body {
     background-color: $body;
   
-    font-family: 'Times New Roman', Times, serif ;
+    font-family: 'Source Sans Pro', sans-serif ;
 }
 
 
@@ -28,9 +28,9 @@ body {
     .main__head{
         
         text-align: center;
-        font-style: italic;
+        font-family: 'Style Script', cursive;
         padding: 5rem ;
-        font-size: 2rem; 
+        font-size: 200%; 
         height: 70%;
     
         .titulo{
@@ -105,8 +105,12 @@ header nav ul li a {
         display: flex;
         flex-direction: column;
         color: white;
-        font-family: cursive;
+        font-family: 'Source Sans Pro', sans-serif ;
         font-size: 1.5rem;
+
+        a{
+            color:white
+        }
         
     }
 
@@ -124,7 +128,7 @@ header nav ul li a {
         text-align: center;
         align-content: center;
         background-color: #222222;
-        font-family: cursive;
+        font-family: 'Source Sans Pro', sans-serif;
         color: white;
         font-size: 1rem;
         
@@ -180,7 +184,7 @@ header nav ul li a {
     }
 
     p{
-        font-family: fantasy;
+        font-family: Arial, Helvetica, sans-serif ;
         font-size: 200%;
         text-align: center;
         justify-content: center;
@@ -344,7 +348,7 @@ header nav ul li a {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    background-color: #C2B8A3;
+    background-color: #eceeec;
     height: 50%;
     width: 100%;
     justify-content: center;
@@ -365,7 +369,8 @@ header nav ul li a {
 
         h1{
             color: rgb(0, 0, 0);
-            font-size: 2.5rem;
+            font-size: 3.5rem;
+            border-bottom: 2px solid black;
         }
 
         p{
@@ -378,12 +383,39 @@ header nav ul li a {
             text-align: center;
             align-items: center;
             justify-content: center;
-            font-size: 2rem;
+            font-size: 3rem;
+            padding-bottom: 50px;
+
+                .form-control-03{
+                    background-color: #f2f2f2;
+                
+                    border: 3px solid black;
+                    width: 100%;
+                    padding-top: 10px;
+                    padding-bottom: 20px;
+
+                        a{
+                            color: rgb(0, 0, 0);
+                        }
+                    
+                }
 
             }
+
+             .form-control-02{
+        background-color: #f2f2f2;
+    
+     
+        border: 3px solid black;
+        width: 100%;
+        padding-top: 10px;
+        padding-bottom: 20px;
+        resize: none;
+    }
     }
     .photo__gift{
-        width: 20%;
+        width: 40%;
+        
     
     }
 }
@@ -425,12 +457,13 @@ header nav ul li a {
         
              .photos{
                 display: inline;
-                width: 300px;
-                height: 300px;
-                margin: 30px;
+                width: 250px;
+                height: 250px;
+                margin: 20px;
             }
 
            
+            
                      
            
  }
