--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -463,8 +463,12 @@ header nav ul li a {
             }
 
            
-            
+            .header__main{ 
+                background-image: url(../fotos/fotos_generales_mobile/prueba_01.jpg);
+            }
                      
-           
+
+          
+
  }
 
