--- a/scss/diseño.css
+++ b/scss/diseño.css
@@ -348,6 +348,10 @@ header nav ul li a {
     height: 250px;
     margin: 20px;
   }
+
+  .header__main {
+    background-image: url(../fotos/fotos_generales_mobile/prueba_01.jpg);
+  }
 }
 .photos {
   display: inline;
@@ -462,10 +466,6 @@ header nav ul li a {
   padding: 2%;
 }
 
-.catalogo {
-  background-color: salmon;
-}
-
 .de_todo_un_poco {
   display: flex;
   flex-wrap: wrap;
@@ -489,12 +489,6 @@ header nav ul li a {
   width: 400px;
   height: 400px;
   justify-content: center;
-  transition: all 500ms ease-out;
-  cursor: pointer;
-}
-.de_todo_un_poco .asd .photos_div .photos_detodo .photos_detodo:focus {
-  width: 250px;
-  height: 200px;
 }
 .de_todo_un_poco .asd .texto_detodo {
   display: flex;
