--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -13,6 +13,8 @@ body {
     background-image: url(../fotos/banner-almhoadones2.jpg);
     background-position: center;
     background-size: cover;
+    padding: 0;
+    
     
 
     display: inline-block;
@@ -21,7 +23,11 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
     color: #000000;
 
-
+    .navbar_new{
+        padding: 0;
+        background-color: #d8d8d8;
+        padding-left: 25px;
+    }
 
   
 
@@ -56,6 +62,7 @@ header nav ul{
 .navbar-light .navbar-nav .nav-link.active{
     color: rgb(0, 0, 0) ;
     background-color: rgb(216, 216, 216);
+    padding: 10px;
     
     
 }
