--- a/scss/diseño.css
+++ b/scss/diseño.css
@@ -11,10 +11,16 @@ body {
   background-image: url(../fotos/banner-almhoadones2.jpg);
   background-position: center;
   background-size: cover;
+  padding: 0;
   display: inline-block;
   z-index: 10;
   font-family: "Source Sans Pro", sans-serif;
   color: #000000;
+}
+.header__main .navbar_new {
+  padding: 0;
+  background-color: #d8d8d8;
+  padding-left: 25px;
 }
 .header__main .main__head {
   text-align: center;
@@ -36,6 +42,7 @@ header nav ul {
 .navbar-light .navbar-nav .nav-link.active {
   color: black;
   background-color: #d8d8d8;
+  padding: 10px;
 }
 
 .li--navbar {
